objects/maps__ButtonSet__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID used by Data Tool to upsert data for demo development purposes</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__CustomAddressLayout__c</fullName>
        <label>Custom Address Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__MassActionLayout__c</fullName>
        <label>Mass Action Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionLayout__c</fullName>
        <label>My Position Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__POILayout__c</fullName>
        <label>POI Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__TooltipLayout__c</fullName>
        <label>Tooltip Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Maps Button Set</label>
    <listViews>
        <fullName>maps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Button Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>